fix: Overflow of tables on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,6 +497,11 @@ ul+.title--medium {
     padding: 0 0 0 15px
 }
 
+.table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+}
+
 .table {
     min-width: 100%;
     margin: 30px 0 0;
